fix to separate metadata repo between reflect and javassist since Ctxx can be modified by TF in the middle (use case = trace jsp in WLS, AOPC) [ note: Jalopy is crap ]