@@ -21,9 +21,9 @@ public class CustomClassLoaderTest extends TestCase {
     }
 
     /**
-     * Note: this test cannot be runned thru the WeavingClassLoader for debugging since it uses custom class loader
-     * hierarchy. See testWeavingClassLoader() commented method
-     */
+    * Note: this test cannot be runned thru the WeavingClassLoader for debugging since it uses custom class loader
+    * hierarchy. See testWeavingClassLoader() commented method
+    */
     public void testCustomClassLoaderWeaving() {
         try {
             VerifierClassLoader cl = new VerifierClassLoader(new URL[] { new URL(targetPath) },
@@ -44,20 +44,20 @@ public class CustomClassLoaderTest extends TestCase {
     // hack clinit to fix taregtPath = "foo";
     // put Target.class in C:\temp and remove it from the IDE compiled classes
     public void testWeavingClassLoader() {
-        try {
-            targetPath = (new java.io.File("C:\\temp\\")).toURL().toString();
-            WeavingClassLoader wcl = new WeavingClassLoader(
-                    new URL[]{new URL(targetPath)},
-                    ClassLoader.getSystemClassLoader());
-            Class target = wcl.loadClass("test.xmldef.clapp.Target");
-            assertEquals(target.getClassLoader().hashCode(), wcl.hashCode());
-            Method m = target.getAdvice("callme", new Class[]{});
-            String res = (String) m.invoke(target.newInstance(), new Object[]{});
-            assertEquals("before call after", res);
-        } catch (Throwable t) {
-            t.printStackTrace();
-            fail(t.getMessage());
-        }
+    try {
+        targetPath = (new java.io.File("C:\\temp\\")).toURL().toString();
+        WeavingClassLoader wcl = new WeavingClassLoader(
+                new URL[]{new URL(targetPath)},
+                ClassLoader.getSystemClassLoader());
+        Class target = wcl.loadClass("test.xmldef.clapp.Target");
+        assertEquals(target.getClassLoader().hashCode(), wcl.hashCode());
+        Method m = target.getAdvice("callme", new Class[]{});
+        String res = (String) m.invoke(target.newInstance(), new Object[]{});
+        assertEquals("before call after", res);
+    } catch (Throwable t) {
+        t.printStackTrace();
+        fail(t.getMessage());
+    }
     }*/
     public static void main(String[] a) {
         CustomClassLoaderTest me = new CustomClassLoaderTest();
@@ -69,16 +69,16 @@ public class CustomClassLoaderTest extends TestCase {
         /*
         // uncomment this to run test outside of junitperf
         Thread t1 = new Thread(new Runnable() {
-            public void run() {
-                CustomClassLoaderTest me = new CustomClassLoaderTest();
-                me.testWeavingClassLoader();
-            }
+        public void run() {
+        CustomClassLoaderTest me = new CustomClassLoaderTest();
+        me.testWeavingClassLoader();
+        }
         });
         Thread t2 = new Thread(new Runnable() {
-            public void run() {
-                CustomClassLoaderTest me = new CustomClassLoaderTest();
-                me.testWeavingClassLoader();
-            }
+        public void run() {
+        CustomClassLoaderTest me = new CustomClassLoaderTest();
+        me.testWeavingClassLoader();
+        }
         });
         t1.start();
         t2.start();
